2003-07-26  Miguel de Icaza  <miguel@ximian.com>

	* namespace.cs: Cache the result of the namespace computation,
	instead of computing it every time.

2003-07-24  Miguel de Icaza  <miguel@ximian.com>

	* decl.cs: Use a global arraylist that we reuse over invocations
	to avoid excesive memory consumption.  Reduces memory usage on an
	mcs compile by one meg (45 average).

	* typemanager.cs (LookupTypeReflection): In .NET pointers are
	private, work around that.

2003-07-23  Miguel de Icaza  <miguel@ximian.com>

	* literal.cs (IntLiteral): Define Zero and One static literals. 

	* cs-parser.jay (integer_literal): use static literals to reduce
	memory usage for the most used literals (0, 1 and -1).  211kb
	reduced in memory usage.

	Replace all calls to `new ArrayList' with `new
	ArrayList(4)' which is a good average number for most allocations,
	and also requires only 16 bytes of memory for its buffer by
	default. 

	This reduced MCS memory usage in seven megabytes for the RSS after
	bootstrapping.

2003-07-28  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (Invocation.OverloadResolve): Fix the algorithm to
	handle params methods the correct way by forming only one
	applicable set with params and normal methods in them. Earlier we
	were looking at params methods only if we found no normal methods
	which was not the correct thing to do.

	(Invocation.BetterFunction): Take separate arguments indicating
	when candidate and the best method are params methods in their
	expanded form.

	This fixes bugs #43367 and #46199.

	* attribute.cs: Documentation updates.

	(CheckAttribute): Rename to CheckAttributeTarget.
	(GetValidPlaces): Rename to GetValidTargets.

	* expression.cs (Invocation.IsParamsMethodApplicable): Fix trivial
	bug - use Convert.ImplicitConversion, not ImplicitUserConversion!

	Fixes bug #44468.

2003-07-28  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.DefineMembers): Use the base type's full